# qdarkgraystyle

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  setup.py.bkp
.github/workflows/: test.yml
example/: example_pyqt.py  example_pyqt5.py  example_pyside.py
qdarkgraystyle/: __init__.py  compile_qrc.py  pyqt5_style_rc.py  pyqt_style_rc.py  pyside_style_rc.py  style.qss
qdarkstyle/: __init__.py  compile_qrc.py  pyqt5_style_rc.py  style.qss
tests/: test_example_pyqt5.py
tests/example/: example_pyqt5.py
tests/example/ui/: compile_ui.sh
