[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdarkgraystyle"
version = "2.0.0"
authors = [
    {name = "Michell Stuttgart", email = "michellstut@gmail.com"},
]
license = {file = "LICENSE"}
description = "A dark gray stylesheet for PyQt/PySide applications"
readme = "README.md"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: X11 Applications :: Qt",
        "Environment :: Win32 (MS Windows)",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8.1"

dependencies = [
  "PyQt5>=5.6"
]

[project.optional-dependencies]
test = [
    "black==21.9b0",
    "check-manifest==0.49",
    "pytest",
]

[project.urls]
Documentation = "https://github.com/mstuttgart/qdarkgraystyle/tree/main#readme"
Source = "https://github.com/mstuttgart/qdarkgraystyle"
Tracker = "https://github.com/mstuttgart/qdarkgraystyle/issues"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
